# smartwallet

./: Anchor.toml  package-lock.json  package.json
programs/smartwallet/: Cargo.toml
programs/smartwallet/src/: errors.rs  lib.rs
programs/smartwallet/src/instructions/: mod.rs  vault_transaction.rs  verifier_ed25519.rs  verifier_secp256k1.rs  wallet_create.rs
programs/smartwallet/src/state/: mod.rs  seeds.rs  wallet.rs
programs/smartwallet/src/utils/: mod.rs
tests/: create_wallet_test.ts  derived_accounts.ts  fetch_account.ts  secp256k1_program_test.ts  secp256k1_test.ts  smartwallet.ts  transaction_multiple_transfer_sol.ts  transaction_transfer_sol.ts
