[package]
name = "smartwallet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smartwallet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
bincode = "1.3.3"
secp256k1 = "0.30.0"
serde = "1.0.215"
sha3 = "0.10.8"
solana-program = "1.17.0"
